<resources>
    <string name="app_name">Wow My Lawn</string>
    <string name="retrofit_logging_request">Sending request %s on %s%n%s%s</string>
    <string name="retrofit_logging_response">Received response for %s in %.1fms%n%s</string>
    <string name="error_msg_no_internet">Not connected to internet</string>
    <string name="error_msg_unauthorized">Your session has timed out. Please login again.</string>
    <string name="page_not_found">Page not found</string>
    <string name="bad_request">Bad Request</string>
    <string name="service_unavailable">Service Unavailable</string>
    <string name="server_error">Server Error</string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="unexpected_error_occurred">Unexpected Error Occurred</string>
    <string name="retrofit_request_method_type"> Method </string>
    <string name="loading">Loading</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="text">Text</string>
    <string name="the_simplest_way_to_have_lawn_property_work_done"><![CDATA[The Simplest way to have lawn & Property work done]]></string>
    <string name="select_services_provider_it_will_n_take_a_few_minutes"><![CDATA[Select Services & Provider, It will \n take a few minutes]]></string>
    <string name="hire_a_mower_n_just_now">Hire a Mower \n Just Now</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="verify_otp">VERIFY OTP</string>
    <string name="account">Account</string>
    <string name="move_the_marker_above_to_drop_a_n_pin_on_your_address">Move the Marker above to drop a \n pin on your address</string>
    <string name="sign_in">Sign In</string>
</resources>