<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.activity.DrawerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp">

        <io.github.florent37.shapeofview.shapes.CircleView
            android:id="@+id/profileImageViewLayout"
            android:layout_width="@dimen/_60sdp"

            android:layout_height="@dimen/_60sdp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/dummy" />

        </io.github.florent37.shapeofview.shapes.CircleView>


        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="Ralph Chloe"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toEndOf="@+id/profileImageViewLayout"
            app:layout_constraintTop_toTopOf="@+id/profileImageViewLayout" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="Customer"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toEndOf="@+id/profileImageViewLayout"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/top_rounded_bg"
        android:backgroundTint="@color/light_grey">


        <EditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/field_rounded_background"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingStart="@dimen/_15sdp"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/dark_blue"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/phoneField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/field_rounded_background"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/phone"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_15sdp"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/dark_blue"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameField" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/field_rounded_background"
            android:drawableStart="@drawable/green_dot"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_15sdp"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/dark_blue"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneField" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/field_rounded_background"
            android:drawableStart="@drawable/ic_lock_icon"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_15sdp"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/dark_blue"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailField" />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/montserrat_semibold"
            android:paddingHorizontal="@dimen/_25sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="Submit"
            android:textAllCaps="false"
            android:textSize="@dimen/_10ssp"
            app:backgroundTint="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordField" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>