<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="com.brainotek.wowmylawn.listener.GenericListeners" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.activity.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginHorizontal="@dimen/_14sdp"

            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="CREATE ACCOUNT"
                android:textColor="@color/green"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="We'll verify your OTP in next screen"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />


            <EditText
                android:id="@+id/nameField"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/field_rounded_background"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/name"
                android:inputType="text"
                android:paddingStart="@dimen/_15sdp"
                android:textColor="@color/dark_blue"
                android:textColorHint="@color/dark_blue"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <EditText
                android:id="@+id/phoneField"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/field_rounded_background"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/phone"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_15sdp"
                android:textColor="@color/dark_blue"
                android:textColorHint="@color/dark_blue"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameField" />

            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/field_rounded_background"
                android:drawableStart="@drawable/green_dot"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/email_address"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_15sdp"
                android:textColor="@color/dark_blue"
                android:textColorHint="@color/dark_blue"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneField" />

            <TextView
                android:id="@+id/typeFieldSelector"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/field_rounded_background"
                android:drawableStart="@drawable/green_dot"
                android:drawableEnd="@drawable/ic_down_arrow"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center_vertical"
                android:hint="Select Type"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textColor="@color/dark_blue"
                android:textColorHint="@color/dark_blue"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailField" />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/field_rounded_background"
                android:drawableStart="@drawable/ic_lock_icon"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_15sdp"
                android:textColor="@color/dark_blue"
                android:textColorHint="@color/dark_blue"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeFieldSelector" />

            <EditText
                android:id="@+id/confirmPasswordField"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/field_rounded_background"
                android:drawableStart="@drawable/ic_lock_icon"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_regular"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_15sdp"
                android:textColor="@color/dark_blue"
                android:textColorHint="@color/dark_blue"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordField" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/montserrat_semibold"
                android:onClick="@{ () -> listener.onTapRegister()}"
                android:paddingHorizontal="@dimen/_25sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:text="Sign Up"
                android:textAllCaps="false"
                android:textSize="@dimen/_10ssp"
                app:backgroundTint="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmPasswordField" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="Already Signed up?"
                    android:textColor="@color/dark_blue" />

                <Button
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:onClick="@{ () -> listener.onTapLogin()}"
                    android:text="Login here"
                    android:textColor="@color/green" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>
</layout>